--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,8 +1,37 @@
 html,
 body {
   height: 100%;
+  height: 100%;
+  margin: 0;
+      
 }
+.bg-image{
 
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+      filter: blur(5px);
+      }
+  /* Position text in the middle of the page/image */
+  .bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    
+    z-index: 0;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+  }
 body {
   display: flex;
   align-items: center;
@@ -27,23 +56,26 @@ body {
 }
 
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  margin-bottom: 10px;
+  
 }
 
 .top {
-  margin-bottom: -1px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  margin-bottom: 10px;
+  
 }
 
-img{
+.mb-4 {
   border-radius: 40%;
+
 
 }
 
 .middle{
-  border-radius: 0%;
-  margin-bottom: -1px;
+  
+  margin-bottom: 10px;
+}
+label{ 
+  color: #696969;
+  opacity: 0.5; 
 }
